nchristus-collector-dropdown: fixed table layout issue when side menu is open

--- a/public/css/less/rt/components/events.less
+++ b/public/css/less/rt/components/events.less
@@ -4,8 +4,7 @@
 
 
 
-
-rt-event-table * {
+.rt-event-table * {
   box-sizing: border-box;
 }
 
@@ -46,7 +45,7 @@ rt-event-table * {
 
 .rt-event-endpoint,
 .rt-event-collector {
-  @media  (min-width: 750px) {
+  @media (min-width: 750px) {
     max-width: 0;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -67,4 +66,79 @@ rt-event-table * {
 
 .rt-event-message {
   display: inline;
+}
+
+
+
+// Side menu open
+// ====================================
+
+.sidemenu-open {
+  .rt-event-time,
+  .rt-event-endpoint,
+  .rt-event-collector,
+  .rt-event-type {
+    margin-left: 50px;
+
+    @media (min-width: 750px) {
+      width: auto;
+      margin-left: 50px;
+    }
+  }
+
+  .rt-event-severity {
+    @media (min-width: 750px) {
+      float: left;
+      margin-right: 15px;
+    }
+
+    @media (min-width: 950px) {
+      width: 25px;
+      float: none;
+      margin: 0;
+      padding: 0 10px;
+    }
+  }
+
+  .rt-event-time {
+    @media (min-width: 900px) {
+      width: 25%;
+    }
+
+    @media (min-width: 1100px) {
+      width: 185px;
+    }
+  }
+
+  .rt-event-endpoint,
+  .rt-event-collector {
+    @media (min-width: 750px) {
+      max-width: initial;
+      overflow: initial;
+      text-overflow: initial;
+      white-space: initial;
+    }
+
+    @media (min-width: 950px) {
+      max-width: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    @media (min-width: 1100px) {
+      width: 200px;
+      padding-right: 15px;
+    }
+  }
+
+  .rt-event-type {
+    @media (min-width: 900px) {
+      width: 25%;
+    }
+
+    @media (min-width: 1100px) {
+      width: auto;
+    }
+  }
 }
