--- a/public/css/less/rt/layout/tables.less
+++ b/public/css/less/rt/layout/tables.less
@@ -33,3 +33,32 @@
     vertical-align: middle;
   }
 }
+
+
+
+// Side menu open
+// ====================================
+
+.sidemenu-open {
+  .rt-table {
+    @media (min-width: 750px) {
+      display: block;
+    }
+
+    @media (min-width: 950px) {
+      display: table;
+    }
+  }
+
+  .rt-table-item {
+    @media (min-width: 750px) {
+      display: block;
+      vertical-align: initial;
+    }
+
+    @media (min-width: 950px) {
+      display: table-cell;
+      vertical-align: middle;
+    }
+  }
+}
